sample_p04/y.output
Terminals unused in grammar

   SQI_O
   INC_O
   DEC_O
   SQR_O
   SGS_O
   RND_O
   CHR_O
   ORD_O
   X_T
   ID
   ERROR


Grammar

    0 $accept: program $end

    1 program: list

    2 list: item
    3     | list item

    4 item: statement
    5     | definition

    6 definition: DEFINE LABEL INTLIT

    7 statement: label_list operation
    8          | operation

    9 label_list: LABEL
   10           | label_list LABEL

   11 operation: class0_operation
   12          | class1_operation
   13          | class2_operation
   14          | class3_operation

   15 class0_operation: ADI_O
   16                 | SBI_O
   17                 | NGI_O
   18                 | MPI_O
   19                 | DVI_O
   20                 | ABI_O
   21                 | MOD_O
   22                 | ADR_O
   23                 | SBR_O
   24                 | NGR_O
   25                 | MPR_O
   26                 | DVR_O
   27                 | ABR_O
   28                 | IOR_O
   29                 | XOR_O
   30                 | AND_O
   31                 | NOT_O
   32                 | INN_O
   33                 | UNI_O
   34                 | NTR_O
   35                 | DIF_O
   36                 | CMP_O
   37                 | FLT_O
   38                 | FLO_O
   39                 | TRC_O
   40                 | STP_O

   41 class1_operation: MST_O INTLIT
   42                 | RTN_O type
   43                 | EQU_O type
   44                 | NEQ_O type
   45                 | LES_O type
   46                 | LEQ_O type
   47                 | GRT_O type
   48                 | GEQ_O type
   49                 | STI_O type

   50 class2_operation: CSP_O stdfunction
   51                 | UJP_O LABEL
   52                 | FJP_O LABEL
   53                 | TJP_O LABEL
   54                 | XJP_O LABEL
   55                 | IXA_O INTLIT

   56 class3_operation: CUP_O INTLIT LABEL
   57                 | ENT_O register LABEL
   58                 | LDA_O INTLIT INTLIT
   59                 | LDC_O type INTLIT
   60                 | LDC_O type REALIT
   61                 | LDC_O type CHRLIT
   62                 | LDC_O type STRLIT
   63                 | LDI_O INTLIT INTLIT
   64                 | LVA_O INTLIT INTLIT
   65                 | LVB_O INTLIT INTLIT
   66                 | LVC_O INTLIT INTLIT
   67                 | LVI_O INTLIT INTLIT
   68                 | LVR_O INTLIT INTLIT
   69                 | LVS_O INTLIT INTLIT
   70                 | LVT_O INTLIT INTLIT

   71 type: P_T
   72     | A_T
   73     | B_T
   74     | C_T
   75     | I_T
   76     | R_T
   77     | S_T
   78     | T_T

   79 register: SP_R
   80         | EP_R
   81         | MP_R
   82         | PC_R
   83         | NP_R

   84 stdfunction: RDB_F
   85            | RDC_F
   86            | RDI_F
   87            | RDR_F
   88            | RLN_F
   89            | WRB_F
   90            | WRC_F
   91            | WRI_F
   92            | WRE_F
   93            | WRF_F
   94            | WRS_F
   95            | WRT_F
   96            | WLN_F
   97            | SQT_F
   98            | LN_F
   99            | EXP_F


Terminals, with rules where they appear

$end (0) 0
error (256)
CUP_O (258) 56
CSP_O (259) 50
ENT_O (260) 57
MST_O (261) 41
RTN_O (262) 42
EQU_O (263) 43
NEQ_O (264) 44
GRT_O (265) 47
GEQ_O (266) 48
LES_O (267) 45
LEQ_O (268) 46
ADI_O (269) 15
SBI_O (270) 16
NGI_O (271) 17
MPI_O (272) 18
DVI_O (273) 19
MOD_O (274) 21
ABI_O (275) 20
SQI_O (276)
INC_O (277)
DEC_O (278)
ADR_O (279) 22
SBR_O (280) 23
NGR_O (281) 24
MPR_O (282) 25
DVR_O (283) 26
ABR_O (284) 27
SQR_O (285)
IOR_O (286) 28
AND_O (287) 30
XOR_O (288) 29
NOT_O (289) 31
INN_O (290) 32
UNI_O (291) 33
NTR_O (292) 34
DIF_O (293) 35
CMP_O (294) 36
SGS_O (295)
UJP_O (296) 51
XJP_O (297) 54
FJP_O (298) 52
TJP_O (299) 53
FLT_O (300) 37
FLO_O (301) 38
TRC_O (302) 39
RND_O (303)
CHR_O (304)
ORD_O (305)
STP_O (306) 40
LDA_O (307) 58
LDC_O (308) 59 60 61 62
LDI_O (309) 63
LVA_O (310) 64
LVB_O (311) 65
LVC_O (312) 66
LVI_O (313) 67
LVR_O (314) 68
LVS_O (315) 69
LVT_O (316) 70
STI_O (317) 49
IXA_O (318) 55
RDB_F (319) 84
RDC_F (320) 85
RDI_F (321) 86
RDR_F (322) 87
RLN_F (323) 88
WRB_F (324) 89
WRC_F (325) 90
WRI_F (326) 91
WRE_F (327) 92
WRF_F (328) 93
WRS_F (329) 94
WRT_F (330) 95
WLN_F (331) 96
SQT_F (332) 97
LN_F (333) 98
EXP_F (334) 99
SP_R (335) 79
EP_R (336) 80
MP_R (337) 81
PC_R (338) 82
NP_R (339) 83
A_T (340) 72
B_T (341) 73
C_T (342) 74
I_T (343) 75
R_T (344) 76
S_T (345) 77
T_T (346) 78
P_T (347) 71
X_T (348)
DEFINE (349) 6
LABEL (350) 6 9 10 51 52 53 54 56 57
INTLIT (351) 6 41 55 56 58 59 63 64 65 66 67 68 69 70
REALIT (352) 60
CHRLIT (353) 61
STRLIT (354) 62
ID (355)
ERROR (356)


Nonterminals, with rules where they appear

$accept (102)
    on left: 0
program (103)
    on left: 1, on right: 0
list (104)
    on left: 2 3, on right: 1 3
item (105)
    on left: 4 5, on right: 2 3
definition (106)
    on left: 6, on right: 5
statement (107)
    on left: 7 8, on right: 4
label_list (108)
    on left: 9 10, on right: 7 10
operation (109)
    on left: 11 12 13 14, on right: 7 8
class0_operation (110)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37 38 39 40, on right: 11
class1_operation (111)
    on left: 41 42 43 44 45 46 47 48 49, on right: 12
class2_operation (112)
    on left: 50 51 52 53 54 55, on right: 13
class3_operation (113)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70, on right:
    14
type (114)
    on left: 71 72 73 74 75 76 77 78, on right: 42 43 44 45 46 47 48
    49 59 60 61 62
register (115)
    on left: 79 80 81 82 83, on right: 57
stdfunction (116)
    on left: 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99, on right:
    50


State 0

    0 $accept: . program $end

    CUP_O   shift, and go to state 1
    CSP_O   shift, and go to state 2
    ENT_O   shift, and go to state 3
    MST_O   shift, and go to state 4
    RTN_O   shift, and go to state 5
    EQU_O   shift, and go to state 6
    NEQ_O   shift, and go to state 7
    GRT_O   shift, and go to state 8
    GEQ_O   shift, and go to state 9
    LES_O   shift, and go to state 10
    LEQ_O   shift, and go to state 11
    ADI_O   shift, and go to state 12
    SBI_O   shift, and go to state 13
    NGI_O   shift, and go to state 14
    MPI_O   shift, and go to state 15
    DVI_O   shift, and go to state 16
    MOD_O   shift, and go to state 17
    ABI_O   shift, and go to state 18
    ADR_O   shift, and go to state 19
    SBR_O   shift, and go to state 20
    NGR_O   shift, and go to state 21
    MPR_O   shift, and go to state 22
    DVR_O   shift, and go to state 23
    ABR_O   shift, and go to state 24
    IOR_O   shift, and go to state 25
    AND_O   shift, and go to state 26
    XOR_O   shift, and go to state 27
    NOT_O   shift, and go to state 28
    INN_O   shift, and go to state 29
    UNI_O   shift, and go to state 30
    NTR_O   shift, and go to state 31
    DIF_O   shift, and go to state 32
    CMP_O   shift, and go to state 33
    UJP_O   shift, and go to state 34
    XJP_O   shift, and go to state 35
    FJP_O   shift, and go to state 36
    TJP_O   shift, and go to state 37
    FLT_O   shift, and go to state 38
    FLO_O   shift, and go to state 39
    TRC_O   shift, and go to state 40
    STP_O   shift, and go to state 41
    LDA_O   shift, and go to state 42
    LDC_O   shift, and go to state 43
    LDI_O   shift, and go to state 44
    LVA_O   shift, and go to state 45
    LVB_O   shift, and go to state 46
    LVC_O   shift, and go to state 47
    LVI_O   shift, and go to state 48
    LVR_O   shift, and go to state 49
    LVS_O   shift, and go to state 50
    LVT_O   shift, and go to state 51
    STI_O   shift, and go to state 52
    IXA_O   shift, and go to state 53
    DEFINE  shift, and go to state 54
    LABEL   shift, and go to state 55

    program           go to state 56
    list              go to state 57
    item              go to state 58
    definition        go to state 59
    statement         go to state 60
    label_list        go to state 61
    operation         go to state 62
    class0_operation  go to state 63
    class1_operation  go to state 64
    class2_operation  go to state 65
    class3_operation  go to state 66


State 1

   56 class3_operation: CUP_O . INTLIT LABEL

    INTLIT  shift, and go to state 67


State 2

   50 class2_operation: CSP_O . stdfunction

    RDB_F  shift, and go to state 68
    RDC_F  shift, and go to state 69
    RDI_F  shift, and go to state 70
    RDR_F  shift, and go to state 71
    RLN_F  shift, and go to state 72
    WRB_F  shift, and go to state 73
    WRC_F  shift, and go to state 74
    WRI_F  shift, and go to state 75
    WRE_F  shift, and go to state 76
    WRF_F  shift, and go to state 77
    WRS_F  shift, and go to state 78
    WRT_F  shift, and go to state 79
    WLN_F  shift, and go to state 80
    SQT_F  shift, and go to state 81
    LN_F   shift, and go to state 82
    EXP_F  shift, and go to state 83

    stdfunction  go to state 84


State 3

   57 class3_operation: ENT_O . register LABEL

    SP_R  shift, and go to state 85
    EP_R  shift, and go to state 86
    MP_R  shift, and go to state 87
    PC_R  shift, and go to state 88
    NP_R  shift, and go to state 89

    register  go to state 90


State 4

   41 class1_operation: MST_O . INTLIT

    INTLIT  shift, and go to state 91


State 5

   42 class1_operation: RTN_O . type

    A_T  shift, and go to state 92
    B_T  shift, and go to state 93
    C_T  shift, and go to state 94
    I_T  shift, and go to state 95
    R_T  shift, and go to state 96
    S_T  shift, and go to state 97
    T_T  shift, and go to state 98
    P_T  shift, and go to state 99

    type  go to state 100


State 6

   43 class1_operation: EQU_O . type

    A_T  shift, and go to state 92
    B_T  shift, and go to state 93
    C_T  shift, and go to state 94
    I_T  shift, and go to state 95
    R_T  shift, and go to state 96
    S_T  shift, and go to state 97
    T_T  shift, and go to state 98
    P_T  shift, and go to state 99

    type  go to state 101


State 7

   44 class1_operation: NEQ_O . type

    A_T  shift, and go to state 92
    B_T  shift, and go to state 93
    C_T  shift, and go to state 94
    I_T  shift, and go to state 95
    R_T  shift, and go to state 96
    S_T  shift, and go to state 97
    T_T  shift, and go to state 98
    P_T  shift, and go to state 99

    type  go to state 102


State 8

   47 class1_operation: GRT_O . type

    A_T  shift, and go to state 92
    B_T  shift, and go to state 93
    C_T  shift, and go to state 94
    I_T  shift, and go to state 95
    R_T  shift, and go to state 96
    S_T  shift, and go to state 97
    T_T  shift, and go to state 98
    P_T  shift, and go to state 99

    type  go to state 103


State 9

   48 class1_operation: GEQ_O . type

    A_T  shift, and go to state 92
    B_T  shift, and go to state 93
    C_T  shift, and go to state 94
    I_T  shift, and go to state 95
    R_T  shift, and go to state 96
    S_T  shift, and go to state 97
    T_T  shift, and go to state 98
    P_T  shift, and go to state 99

    type  go to state 104


State 10

   45 class1_operation: LES_O . type

    A_T  shift, and go to state 92
    B_T  shift, and go to state 93
    C_T  shift, and go to state 94
    I_T  shift, and go to state 95
    R_T  shift, and go to state 96
    S_T  shift, and go to state 97
    T_T  shift, and go to state 98
    P_T  shift, and go to state 99

    type  go to state 105


State 11

   46 class1_operation: LEQ_O . type

    A_T  shift, and go to state 92
    B_T  shift, and go to state 93
    C_T  shift, and go to state 94
    I_T  shift, and go to state 95
    R_T  shift, and go to state 96
    S_T  shift, and go to state 97
    T_T  shift, and go to state 98
    P_T  shift, and go to state 99

    type  go to state 106


State 12

   15 class0_operation: ADI_O .

    $default  reduce using rule 15 (class0_operation)


State 13

   16 class0_operation: SBI_O .

    $default  reduce using rule 16 (class0_operation)


State 14

   17 class0_operation: NGI_O .

    $default  reduce using rule 17 (class0_operation)


State 15

   18 class0_operation: MPI_O .

    $default  reduce using rule 18 (class0_operation)


State 16

   19 class0_operation: DVI_O .

    $default  reduce using rule 19 (class0_operation)


State 17

   21 class0_operation: MOD_O .

    $default  reduce using rule 21 (class0_operation)


State 18

   20 class0_operation: ABI_O .

    $default  reduce using rule 20 (class0_operation)


State 19

   22 class0_operation: ADR_O .

    $default  reduce using rule 22 (class0_operation)


State 20

   23 class0_operation: SBR_O .

    $default  reduce using rule 23 (class0_operation)


State 21

   24 class0_operation: NGR_O .

    $default  reduce using rule 24 (class0_operation)


State 22

   25 class0_operation: MPR_O .

    $default  reduce using rule 25 (class0_operation)


State 23

   26 class0_operation: DVR_O .

    $default  reduce using rule 26 (class0_operation)


State 24

   27 class0_operation: ABR_O .

    $default  reduce using rule 27 (class0_operation)


State 25

   28 class0_operation: IOR_O .

    $default  reduce using rule 28 (class0_operation)


State 26

   30 class0_operation: AND_O .

    $default  reduce using rule 30 (class0_operation)


State 27

   29 class0_operation: XOR_O .

    $default  reduce using rule 29 (class0_operation)


State 28

   31 class0_operation: NOT_O .

    $default  reduce using rule 31 (class0_operation)


State 29

   32 class0_operation: INN_O .

    $default  reduce using rule 32 (class0_operation)


State 30

   33 class0_operation: UNI_O .

    $default  reduce using rule 33 (class0_operation)


State 31

   34 class0_operation: NTR_O .

    $default  reduce using rule 34 (class0_operation)


State 32

   35 class0_operation: DIF_O .

    $default  reduce using rule 35 (class0_operation)


State 33

   36 class0_operation: CMP_O .

    $default  reduce using rule 36 (class0_operation)


State 34

   51 class2_operation: UJP_O . LABEL

    LABEL  shift, and go to state 107


State 35

   54 class2_operation: XJP_O . LABEL

    LABEL  shift, and go to state 108


State 36

   52 class2_operation: FJP_O . LABEL

    LABEL  shift, and go to state 109


State 37

   53 class2_operation: TJP_O . LABEL

    LABEL  shift, and go to state 110


State 38

   37 class0_operation: FLT_O .

    $default  reduce using rule 37 (class0_operation)


State 39

   38 class0_operation: FLO_O .

    $default  reduce using rule 38 (class0_operation)


State 40

   39 class0_operation: TRC_O .

    $default  reduce using rule 39 (class0_operation)


State 41

   40 class0_operation: STP_O .

    $default  reduce using rule 40 (class0_operation)


State 42

   58 class3_operation: LDA_O . INTLIT INTLIT

    INTLIT  shift, and go to state 111


State 43

   59 class3_operation: LDC_O . type INTLIT
   60                 | LDC_O . type REALIT
   61                 | LDC_O . type CHRLIT
   62                 | LDC_O . type STRLIT

    A_T  shift, and go to state 92
    B_T  shift, and go to state 93
    C_T  shift, and go to state 94
    I_T  shift, and go to state 95
    R_T  shift, and go to state 96
    S_T  shift, and go to state 97
    T_T  shift, and go to state 98
    P_T  shift, and go to state 99

    type  go to state 112


State 44

   63 class3_operation: LDI_O . INTLIT INTLIT

    INTLIT  shift, and go to state 113


State 45

   64 class3_operation: LVA_O . INTLIT INTLIT

    INTLIT  shift, and go to state 114


State 46

   65 class3_operation: LVB_O . INTLIT INTLIT

    INTLIT  shift, and go to state 115


State 47

   66 class3_operation: LVC_O . INTLIT INTLIT

    INTLIT  shift, and go to state 116


State 48

   67 class3_operation: LVI_O . INTLIT INTLIT

    INTLIT  shift, and go to state 117


State 49

   68 class3_operation: LVR_O . INTLIT INTLIT

    INTLIT  shift, and go to state 118


State 50

   69 class3_operation: LVS_O . INTLIT INTLIT

    INTLIT  shift, and go to state 119


State 51

   70 class3_operation: LVT_O . INTLIT INTLIT

    INTLIT  shift, and go to state 120


State 52

   49 class1_operation: STI_O . type

    A_T  shift, and go to state 92
    B_T  shift, and go to state 93
    C_T  shift, and go to state 94
    I_T  shift, and go to state 95
    R_T  shift, and go to state 96
    S_T  shift, and go to state 97
    T_T  shift, and go to state 98
    P_T  shift, and go to state 99

    type  go to state 121


State 53

   55 class2_operation: IXA_O . INTLIT

    INTLIT  shift, and go to state 122


State 54

    6 definition: DEFINE . LABEL INTLIT

    LABEL  shift, and go to state 123


State 55

    9 label_list: LABEL .

    $default  reduce using rule 9 (label_list)


State 56

    0 $accept: program . $end

    $end  shift, and go to state 124


State 57

    1 program: list .
    3 list: list . item

    CUP_O   shift, and go to state 1
    CSP_O   shift, and go to state 2
    ENT_O   shift, and go to state 3
    MST_O   shift, and go to state 4
    RTN_O   shift, and go to state 5
    EQU_O   shift, and go to state 6
    NEQ_O   shift, and go to state 7
    GRT_O   shift, and go to state 8
    GEQ_O   shift, and go to state 9
    LES_O   shift, and go to state 10
    LEQ_O   shift, and go to state 11
    ADI_O   shift, and go to state 12
    SBI_O   shift, and go to state 13
    NGI_O   shift, and go to state 14
    MPI_O   shift, and go to state 15
    DVI_O   shift, and go to state 16
    MOD_O   shift, and go to state 17
    ABI_O   shift, and go to state 18
    ADR_O   shift, and go to state 19
    SBR_O   shift, and go to state 20
    NGR_O   shift, and go to state 21
    MPR_O   shift, and go to state 22
    DVR_O   shift, and go to state 23
    ABR_O   shift, and go to state 24
    IOR_O   shift, and go to state 25
    AND_O   shift, and go to state 26
    XOR_O   shift, and go to state 27
    NOT_O   shift, and go to state 28
    INN_O   shift, and go to state 29
    UNI_O   shift, and go to state 30
    NTR_O   shift, and go to state 31
    DIF_O   shift, and go to state 32
    CMP_O   shift, and go to state 33
    UJP_O   shift, and go to state 34
    XJP_O   shift, and go to state 35
    FJP_O   shift, and go to state 36
    TJP_O   shift, and go to state 37
    FLT_O   shift, and go to state 38
    FLO_O   shift, and go to state 39
    TRC_O   shift, and go to state 40
    STP_O   shift, and go to state 41
    LDA_O   shift, and go to state 42
    LDC_O   shift, and go to state 43
    LDI_O   shift, and go to state 44
    LVA_O   shift, and go to state 45
    LVB_O   shift, and go to state 46
    LVC_O   shift, and go to state 47
    LVI_O   shift, and go to state 48
    LVR_O   shift, and go to state 49
    LVS_O   shift, and go to state 50
    LVT_O   shift, and go to state 51
    STI_O   shift, and go to state 52
    IXA_O   shift, and go to state 53
    DEFINE  shift, and go to state 54
    LABEL   shift, and go to state 55

    $default  reduce using rule 1 (program)

    item              go to state 125
    definition        go to state 59
    statement         go to state 60
    label_list        go to state 61
    operation         go to state 62
    class0_operation  go to state 63
    class1_operation  go to state 64
    class2_operation  go to state 65
    class3_operation  go to state 66


State 58

    2 list: item .

    $default  reduce using rule 2 (list)


State 59

    5 item: definition .

    $default  reduce using rule 5 (item)


State 60

    4 item: statement .

    $default  reduce using rule 4 (item)


State 61

    7 statement: label_list . operation
   10 label_list: label_list . LABEL
